fixes #7 - os x default memory settings